css/custom.css
/* ---- GLOBAL styles: ----*/
:root {
    --color-accent-primary: #5d001e;
    --color-accent-secondary: #9a1750;
    --color-background-primary: #e3e2df;
    --color-background-secondary: #e3afbc;
    --color-font: #222;
}

body {
    background-color: var(--color-background-primary);
    font-family: 'Cuprum', sans-serif;
    color: var(--color-font);
}

h2 {
    color: var(--color-accent-secondary);
    font-weight: 700;
    text-transform: uppercase;
}
h3 {
    padding-top: 1rem;
}
ul {
    list-style: circle outside;
    margin-left: 2rem;
}
li {
    text-align: left;
}

.section {
    padding: 5rem 0 2rem;
    text-align: center;
}
@media (min-width: 550px) {
    .section {
        padding: 5rem 0 2rem;
    }
}
@media (min-width: 1000px) {
    .section {
        padding: 3rem 0 3rem;
    }
}
.section-heading,
.section-description {
    margin-bottom: 1.2rem;
}

.accent,
.accent a {
    color: var(--color-accent-secondary);
}
.accent-green {
    color: #086623;
}
.nowrap {
    white-space: nowrap;
}
.button,
button,
input[type="submit"],
input[type="reset"],
input[type="button"] {
    border: 1px solid #fff;
    color: #fff;
}
.button:hover,
button:hover,
input[type="submit"]:hover,
input[type="reset"]:hover,
input[type="button"]:hover,
.button:focus,
button:focus,
input[type="submit"]:focus,
input[type="reset"]:focus,
input[type="button"]:focus {
    border: 1px solid var(--color-background-primary);
    color: var(--color-background-primary);
}
.button.button-primary,
button.button-primary,
input[type="submit"].button-primary,
input[type="reset"].button-primary,
input[type="button"].button-primary {
    color: #FFF;
    background-color: var(--color-accent-secondary);
    border-color: var(--color-accent-secondary); }
.button.button-primary:hover,
button.button-primary:hover,
input[type="submit"].button-primary:hover,
input[type="reset"].button-primary:hover,
input[type="button"].button-primary:hover,
.button.button-primary:focus,
button.button-primary:focus,
input[type="submit"].button-primary:focus,
input[type="reset"].button-primary:focus,
input[type="button"].button-primary:focus {
    color: #FFF;
    background-color: var(--color-accent-primary);
    border-color: var(--color-accent-primary); }

.button,
button,
input[type="submit"],
input[type="reset"],
input[type="button"] {
    font-size: 1.5rem;
    border-radius: 1rem;
}

.button-small {
    line-height: 2.5rem;
    height: 2.5rem;
    font-size: 1.125rem;
    padding: 0 1rem;
    border-radius: .75rem;
    margin-bottom: .5rem;
}

.footer {
    left: 0;
    bottom: 0;
    width: 100%;
    background-color: var(--color-accent-secondary);
    color: white;
    text-align: center;
    padding: .5rem 0;
}

table {
    width: 100%;
    table-layout: fixed;
    margin: auto;
    max-width: 70rem;
}
th, td {
    padding: 5px 8px;
    border-bottom-color: #bbb;
}
.date {
    width: 5rem;
}
.amount {
    width: 8rem;
}
.content {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

.small-table {
    display: table-row;
}
.small-table .text-right {
    padding-bottom: 0;
    border-bottom: none;
}
.small-table .content {
    padding-top: 0;
    padding-left: .5rem;
}
.big-table {
    display: none;
}

/* ---- Custom styles: ----*/

.mb-15 {
    margin-bottom: 3rem;
}
.mr-5 {
    margin-right: 1rem;
}
.ml-5 {
    margin-left: 1rem;
}
.f-125 {
    font-size: 1.25rem;
}
.f-175 {
    font-size: 1.75rem;
}
.f-300 {
    font-size: 3rem;
}
.text-right {
    text-align: right;
}
.text-left {
    text-align: left;
}

.introduction-photo {
    position: relative;
}

.introduction {
    padding: 9rem 0 2rem;
}
.introduction-photo > img {
    max-width: 90%;
    position: relative;
    margin: -1rem auto 1rem;
}

@media (min-width: 550px) {
    .introduction {
        padding: 9rem 0 7rem;
    }
    .introduction-photo > img {
        max-height: 48rem;
        position: absolute;
        top: -6rem;
        right: 2rem;
    }
}
/* @media (min-width: 750px) {
 }
*/
@media (min-width: 1000px) {
    .introduction {
        padding: 15rem 0;
    }
    .introduction-photo > img {
        max-height: 48rem;
        position: absolute;
        top: -13rem;
        right: 5rem;
    }
    .small-table {
        display: none;
    }
    .big-table {
        display: table-row;
    }
}

.places {
    background-color: var(--color-background-secondary);
    background-size: cover;
    color: #ffffff;
}
.places-title {
    color: var(--color-accent-primary);
    text-transform: uppercase;
    margin-bottom: 0;
}
.places-subtitle {
    margin-bottom: 1rem;
}

.inline {
    display: inline-block;
}

#cookie-popup {
    text-align: center;
    padding-top: 2rem;
    background-color: #2d89ef;
    color: #fff;
    position: fixed;
    top: -10rem;
    right: 0;
    left: 0;
    z-index: 2;
}

.account-table-wrapper {
    overflow-y: hidden;
    max-height: 0;
    transition: max-height .5s linear 0s;
}

.row > .pic > img {
    max-width: 90%;
    padding: .75rem;
    background-color: white;
}
.timeline-date {
    text-align: center;
}
.right-arrow,
.left-arrow{
    z-index: 0;
}
.right-arrow > img,
.left-arrow > img {
    position: absolute;
    bottom: 5.5rem;
}
.right-arrow > img {
    transform: rotate(90deg);
    left: -10%;
}
.left-arrow > img {
    transform: rotate(270deg) scale(-1, 1);
    right: -10%;
}
.right-arrow.portrait > img,
.left-arrow.portrait > img {
    bottom: 10.5rem;
}

.one-half.column.pic {
    z-index: 1;
}
.arrow-down {
    transform: rotate(270deg);
    max-width: 3rem;
}
.arrow90 {
    display: none;
}

@media (min-width: 550px) {
    .right-arrow > img,
    .left-arrow > img {
        max-height: 40%;
        height: 7rem;
    }
    .timeline > .one-half.column {
        flex: 1;
        position: relative;
    }
    .timeline.row {
        display: flex;
    }
    .timeline.row.overlap {
        margin-top: -5rem; /* overlap */
    }
    .timeline.row.overlap-after-portrait {
        margin-top: -10rem; /* overlap */
    }
    .arrow-down {
        display: none;
    }
    .arrow90 {
        display: inherit;
    }
    .timeline-date {
        text-align: left;
    }
    #first-timeline-arrow {
        background: none;
        position: absolute;
        bottom: -7rem;
        height: 7rem;
        max-height: 7rem;
        left: -12%;
        transform: rotate(180deg);
    }
}
@media (min-width: 1000px) {
    .right-arrow > img,
    .left-arrow > img {
        max-height: 45%;
        height: 13rem;
    }
    #first-timeline-arrow {
        bottom: -13rem;
        height: 13rem;
        max-height: 13rem;
    }
}

.flip-box {
    display: inline-block;
    position: relative;
    background-color: transparent;
    max-width: 90%;
}

.flip-box-inner {
    position: relative;
    text-align: center;
    transition: transform 0.8s;
    transform-style: preserve-3d;
}

@media (hover: hover) {
    .flip-box:hover .flip-box-inner {
        transform: rotateY(180deg);
    }
}

.flip-box.hover .flip-box-inner {
    transform: rotateY(180deg);
}

.flip-box-front,
.flip-box-back {
    backface-visibility: hidden;
}
.flip-box-front {
    padding: .75rem;
    background-color: white;
}

.flip-box-front > img {
    width: 100%;
    display: block;
}

.flip-box-back {
    width: 100%;
    height: 100%;
    background-color: var(--color-accent-secondary);
    color: #ffffff;
    position: absolute;
    top: 0;
    transform: rotateY(180deg);
    display: flex;
    justify-content: center;
    align-items: center;
}
.flip-box-back-color {
    color: var(--color-background-secondary);
}

.avatar {
    border-radius: 50%;
    width: 70%;
}

.table-icons {
    line-height: 3.5rem;
}
a.table-icons {
    display: block;
    text-decoration: none;
    /*color: inherit;*/
}
.table-icons > img {
    vertical-align: middle;
    height: 3rem;
}
.table-icons .small {
    height: 2.75rem;
}
.divide-on-small {
    margin-top: 5rem;
}
@media (min-width: 550px) {
    .divide-on-small {
        margin-top: 0;
    }
}

.program-time {
    width: 21%;
    text-align: right;
    padding-right: 5%;
}
.program-table {
    max-width: 30rem;
}
.commands {
    padding-top: 3rem;
}@media (min-width: 550px) {
    .commands {
        padding-top: 0;
    }
}

.pay-img {
    width: 100%;
    object-fit: scale-down;
    height: 0;
    transition: height .5s linear 0s;
}
.pay-img-wrapper {
    width: 100%;
    max-width: 23rem;
    display: inline-block;
}

